--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 };
             };
         </script>
-		<title>蓝鲸游泳俱乐部 &#8211; 又一个WordPress站点</title>
+		<title>Xianyu's HomePage</title>
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
 <link rel="dns-prefetch" href="//s.w.org">
 <link rel="alternate" type="application/rss+xml" title="蓝鲸游泳俱乐部 &raquo; Feed" href="./feed/index.html">
