--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="https://blog.xianyu.one/favicon.ico?v=1621236613789">
     <meta name =“ yandex-verification” content =“ d221959e08931076” />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<meta name="theme-color" content="#1c518d">	<link rel="profile" href="https://gmpg.org/xfn/11">
