--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--[if !(IE 6) | !(IE 7) | !(IE 8)  ]><!--><html lang="zh-CN" class="no-js">
 <!--<![endif]-->
 <head>
+	<script data-ad-client="ca-pub-1656773845938636" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="https://blog.xianyu.one/favicon.ico?v=1621236613789">
     <meta name =“ yandex-verification” content =“ d221959e08931076” />
