--- a/index.html
+++ b/index.html
@@ -270,19 +270,28 @@ margin-top: 3px;
 		</figure>
 	</div>
 <div class=" vc_custom_1621258581735 uavc-icons-center uavc-icons ">
-<a class="aio-tooltip 60a27ca37274c" href="mailto:me@xianyu.one" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
-	<i class="icomoon-the7-font-the7-mail-03"></i>
+<a class="aio-tooltip 60b66331cf409" href="mailto:me@xianyu.one" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
+	<i class="icomoon-the7-font-the7-mail-011"></i>
 </div></a>
-<a class="aio-tooltip 60a27ca3727d4" href="https://blog.xianyu.one/" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
-	<i class="icomoon-free-social-contact-16x16-blogger"></i>
+<a class="aio-tooltip 60b66331cf461" href="https://blog.xianyu.one/" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
+	<i class="fab fa-blogger-b"></i>
 </div></a>
-<a class="aio-tooltip 60a27ca372829" href="https://twitter.com/xianyu_one" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
+<a class="aio-tooltip 60b66331cf4a6" href="https://twitter.com/xianyu_one" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
 	<i class="icomoon-free-social-contact-16x16-twitter"></i>
 </div></a>
-<a class="aio-tooltip 60a27ca37287c" href="https://blog.xianyu.one/atom.xml" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
+<a class="aio-tooltip 60b66331cf4ed" href="https://share.xianyu.one/" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
+	<i class="icomoon-brankic-32x32-cloud"></i>
+</div></a>
+<a class="aio-tooltip 60b66331cf530" href="https://blog.xianyu.one/atom.xml" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
 	<i class="icomoon-the7-font-rss"></i>
 </div></a>
 </div>
+	<div class="wpb_text_column wpb_content_element ">
+		<div class="wpb_wrapper">
+			<p style="text-align: center;">Copyrights © 2019-2021 咸鱼</p>
+
+		</div>
+	</div>
 </div></div></div></div>
 <div class="vc_row-full-width vc_clearfix"></div>
 <!-- Row Backgrounds --><div class="upb_color" data-bg-override="0" data-bg-color="#282830" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="6.6.0.1" data-is_old_vc="" data-theme-support="" data-overlay="false" data-overlay-color="" data-overlay-pattern="" data-overlay-pattern-opacity="" data-overlay-pattern-size=""></div>
