--- a/index.html
+++ b/index.html
@@ -279,6 +279,9 @@ margin-top: 3px;
 <a class="aio-tooltip 60b66331cf4a6" href="https://twitter.com/xianyu_one" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
 	<i class="icomoon-free-social-contact-16x16-twitter"></i>
 </div></a>
+<a class="aio-tooltip 60cf5718ed276" href="https://github.com/xianyu-one" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
+	<i class="icomoon-free-social-contact-16x16-github"></i>
+</div></a>
 <a class="aio-tooltip 60b66331cf4ed" href="https://share.xianyu.one/" data-toggle="tooltip" data-placement="" title=""><div class="aio-icon  " data-animation="" data-animation-delay="03" style="color:#ffffff;font-size:20px;margin-right:5px;">
 	<i class="icomoon-brankic-32x32-cloud"></i>
 </div></a>
