--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<script data-ad-client="ca-pub-1656773845938636" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" href="https://blog.xianyu.one/favicon.ico?v=1621236613789">
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/xianyu-one-page/xianyu-one-page.github.io/master/favicon.ico">
     <meta name =“ yandex-verification” content =“ d221959e08931076” />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<meta name="theme-color" content="#1c518d">	<link rel="profile" href="https://gmpg.org/xfn/11">
